Revert "Add pii filter. CAR-44"
This reverts commit 89e63065
